reports/k8s-network-run3-iptables-after.txt
# Generated by iptables-save v1.8.11 (nf_tables) on Tue Sep  8 08:03:15 2026
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:KUBE-IPTABLES-HINT - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-PROXY-CANARY - [0:0]
COMMIT
# Completed on Tue Sep  8 08:03:15 2026
# Generated by iptables-save v1.8.11 (nf_tables) on Tue Sep  8 08:03:15 2026
*filter
:INPUT ACCEPT [172:143759]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [214:83651]
:FLANNEL-FWD - [0:0]
:KUBE-EXTERNAL-SERVICES - [0:0]
:KUBE-FIREWALL - [0:0]
:KUBE-FORWARD - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-NWPLCY-5L5R2TBUP7CTYE6S - [0:0]
:KUBE-NWPLCY-7EIQEOQNYOY5QJJI - [0:0]
:KUBE-NWPLCY-COMMON - [0:0]
:KUBE-NWPLCY-DEFAULT - [0:0]
:KUBE-NWPLCY-EP3TLOLLFXCO4NCE - [0:0]
:KUBE-NWPLCY-FFCIBUADGISF4ZW2 - [0:0]
:KUBE-NWPLCY-GEX54ESJ3GESE4HG - [0:0]
:KUBE-NWPLCY-KCOQQZUQKCVQRMHZ - [0:0]
:KUBE-NWPLCY-KJ543XKAP2JWFWVG - [0:0]
:KUBE-NWPLCY-TBPD5DFZ46H2NSTF - [0:0]
:KUBE-NWPLCY-TS4YBIM3KQBOBTSF - [0:0]
:KUBE-NWPLCY-VMX2OD5X6E3SELBA - [0:0]
:KUBE-POD-FW-7DTVWGOX6Q6VDYRC - [0:0]
:KUBE-POD-FW-JVN3SWUVDHBSWPWJ - [0:0]
:KUBE-POD-FW-ZUWXXR5ULAICLTHP - [0:0]
:KUBE-PROXY-CANARY - [0:0]
:KUBE-PROXY-FIREWALL - [0:0]
:KUBE-ROUTER-FORWARD - [0:0]
:KUBE-ROUTER-INPUT - [0:0]
:KUBE-ROUTER-OUTPUT - [0:0]
:KUBE-SERVICES - [0:0]
[242:196959] -A INPUT -m comment --comment "kube-router netpol - 4IA2OSFRMVNDXBVV" -j KUBE-ROUTER-INPUT
[42:35870] -A INPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes load balancer firewall" -j KUBE-PROXY-FIREWALL
[172:143759] -A INPUT -m comment --comment "kubernetes health check service ports" -j KUBE-NODEPORTS
[42:35870] -A INPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes externally-visible service portals" -j KUBE-EXTERNAL-SERVICES
[172:143759] -A INPUT -j KUBE-FIREWALL
[0:0] -A INPUT -m comment --comment "KUBE-ROUTER rule to explicitly ACCEPT traffic that comply to network policies" -m mark --mark 0x20000/0x20000 -j ACCEPT
[128:52627] -A FORWARD -m comment --comment "kube-router netpol - TEMCG2JMHZYE7H7T" -j KUBE-ROUTER-FORWARD
[0:0] -A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes load balancer firewall" -j KUBE-PROXY-FIREWALL
[0:0] -A FORWARD -m comment --comment "kubernetes forwarding rules" -j KUBE-FORWARD
[0:0] -A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
[0:0] -A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes externally-visible service portals" -j KUBE-EXTERNAL-SERVICES
[0:0] -A FORWARD -m comment --comment "KUBE-ROUTER rule to explicitly ACCEPT traffic that comply to network policies" -m mark --mark 0x20000/0x20000 -j ACCEPT
[0:0] -A FORWARD -m comment --comment "flanneld forward" -j FLANNEL-FWD
[309:107676] -A OUTPUT -m comment --comment "kube-router netpol - VEAAIY32XVBHCSCY" -j KUBE-ROUTER-OUTPUT
[86:23157] -A OUTPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes load balancer firewall" -j KUBE-PROXY-FIREWALL
[86:23157] -A OUTPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
[214:83651] -A OUTPUT -j KUBE-FIREWALL
[0:0] -A OUTPUT -m comment --comment "KUBE-ROUTER rule to explicitly ACCEPT traffic that comply to network policies" -m mark --mark 0x20000/0x20000 -j ACCEPT
[0:0] -A FLANNEL-FWD -s 10.42.0.0/16 -m comment --comment "flanneld forward" -j ACCEPT
[0:0] -A FLANNEL-FWD -d 10.42.0.0/16 -m comment --comment "flanneld forward" -j ACCEPT
[0:0] -A KUBE-FIREWALL ! -s 127.0.0.0/8 -d 127.0.0.0/8 -m comment --comment "block incoming localnet connections" -m conntrack ! --ctstate RELATED,ESTABLISHED,DNAT -j DROP
[0:0] -A KUBE-FORWARD -m conntrack --ctstate INVALID -m nfacct --nfacct-name  ct_state_invalid_dropped_pkts -j DROP
[0:0] -A KUBE-FORWARD -m comment --comment "kubernetes forwarding rules" -m mark --mark 0x4000/0x4000 -j ACCEPT
[0:0] -A KUBE-FORWARD -m comment --comment "kubernetes forwarding conntrack rule" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
[0:0] -A KUBE-NWPLCY-5L5R2TBUP7CTYE6S -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name load-auditor-egress namespace evidscope" -m set --match-set KUBE-SRC-B5ETJTBAQ73VARWN src -m set --match-set KUBE-DST-5P757CCH32DCC3CT dst -m tcp --dport 8080 -j MARK --set-xmark 0x10000/0x10000
[0:0] -A KUBE-NWPLCY-5L5R2TBUP7CTYE6S -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name load-auditor-egress namespace evidscope" -m set --match-set KUBE-SRC-B5ETJTBAQ73VARWN src -m set --match-set KUBE-DST-5P757CCH32DCC3CT dst -m tcp --dport 8080 -m mark --mark 0x10000/0x10000 -j RETURN
[0:0] -A KUBE-NWPLCY-5L5R2TBUP7CTYE6S -p udp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name load-auditor-egress namespace evidscope" -m set --match-set KUBE-SRC-B5ETJTBAQ73VARWN src -m set --match-set KUBE-DST-YKLIJWUY5Y2CDNAM dst -m udp --dport 53 -j MARK --set-xmark 0x10000/0x10000
[0:0] -A KUBE-NWPLCY-5L5R2TBUP7CTYE6S -p udp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name load-auditor-egress namespace evidscope" -m set --match-set KUBE-SRC-B5ETJTBAQ73VARWN src -m set --match-set KUBE-DST-YKLIJWUY5Y2CDNAM dst -m udp --dport 53 -m mark --mark 0x10000/0x10000 -j RETURN
[0:0] -A KUBE-NWPLCY-5L5R2TBUP7CTYE6S -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name load-auditor-egress namespace evidscope" -m set --match-set KUBE-SRC-B5ETJTBAQ73VARWN src -m set --match-set KUBE-DST-YKLIJWUY5Y2CDNAM dst -m tcp --dport 53 -j MARK --set-xmark 0x10000/0x10000
[0:0] -A KUBE-NWPLCY-5L5R2TBUP7CTYE6S -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name load-auditor-egress namespace evidscope" -m set --match-set KUBE-SRC-B5ETJTBAQ73VARWN src -m set --match-set KUBE-DST-YKLIJWUY5Y2CDNAM dst -m tcp --dport 53 -m mark --mark 0x10000/0x10000 -j RETURN
[0:0] -A KUBE-NWPLCY-5L5R2TBUP7CTYE6S -m comment --comment "rule to log dropped traffic" -m limit --limit 10/min --limit-burst 10 -m mark ! --mark 0x10000/0x10000 -j NFLOG --nflog-prefix "DROP by policy evidscope/load-auditor-egress" --nflog-group 100
[0:0] -A KUBE-NWPLCY-7EIQEOQNYOY5QJJI -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name ingress-to-vault namespace evidscope" -m set --match-set KUBE-SRC-255LHNX7S33PW476 src -m set --match-set KUBE-DST-YIIKUC74WBMVIS3V dst -m tcp --dport 8080 -j MARK --set-xmark 0x10000/0x10000
[0:0] -A KUBE-NWPLCY-7EIQEOQNYOY5QJJI -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name ingress-to-vault namespace evidscope" -m set --match-set KUBE-SRC-255LHNX7S33PW476 src -m set --match-set KUBE-DST-YIIKUC74WBMVIS3V dst -m tcp --dport 8080 -m mark --mark 0x10000/0x10000 -j RETURN
[0:0] -A KUBE-NWPLCY-7EIQEOQNYOY5QJJI -p udp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name ingress-to-vault namespace evidscope" -m set --match-set KUBE-SRC-255LHNX7S33PW476 src -m set --match-set KUBE-DST-PLQ4F7Z45PUMPHPK dst -m udp --dport 53 -j MARK --set-xmark 0x10000/0x10000
[0:0] -A KUBE-NWPLCY-7EIQEOQNYOY5QJJI -p udp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name ingress-to-vault namespace evidscope" -m set --match-set KUBE-SRC-255LHNX7S33PW476 src -m set --match-set KUBE-DST-PLQ4F7Z45PUMPHPK dst -m udp --dport 53 -m mark --mark 0x10000/0x10000 -j RETURN
[0:0] -A KUBE-NWPLCY-7EIQEOQNYOY5QJJI -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name ingress-to-vault namespace evidscope" -m set --match-set KUBE-SRC-255LHNX7S33PW476 src -m set --match-set KUBE-DST-PLQ4F7Z45PUMPHPK dst -m tcp --dport 53 -j MARK --set-xmark 0x10000/0x10000
[0:0] -A KUBE-NWPLCY-7EIQEOQNYOY5QJJI -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name ingress-to-vault namespace evidscope" -m set --match-set KUBE-SRC-255LHNX7S33PW476 src -m set --match-set KUBE-DST-PLQ4F7Z45PUMPHPK dst -m tcp --dport 53 -m mark --mark 0x10000/0x10000 -j RETURN
[0:0] -A KUBE-NWPLCY-7EIQEOQNYOY5QJJI -m comment --comment "rule to log dropped traffic" -m limit --limit 10/min --limit-burst 10 -m mark ! --mark 0x10000/0x10000 -j NFLOG --nflog-prefix "DROP by policy evidscope/ingress-to-vault" --nflog-group 100
[0:0] -A KUBE-NWPLCY-COMMON -m comment --comment "\"rule to drop invalid state for pod\"" -m conntrack --ctstate INVALID -j DROP
[282:129192] -A KUBE-NWPLCY-COMMON -m comment --comment "\"rule for stateful firewall for pod\"" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
[0:0] -A KUBE-NWPLCY-COMMON -p icmp -m comment --comment "allow icmp echo requests" -m icmp --icmp-type 8 -j ACCEPT
[0:0] -A KUBE-NWPLCY-COMMON -p icmp -m comment --comment "allow icmp destination unreachable messages" -m icmp --icmp-type 3 -j ACCEPT
[0:0] -A KUBE-NWPLCY-COMMON -p icmp -m comment --comment "allow icmp time exceeded messages" -m icmp --icmp-type 11 -j ACCEPT
[0:0] -A KUBE-NWPLCY-DEFAULT -m comment --comment "rule to mark traffic matching a network policy" -j MARK --set-xmark 0x10000/0x10000
[0:0] -A KUBE-NWPLCY-EP3TLOLLFXCO4NCE -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name audit-to-vault namespace evidscope" -m set --match-set KUBE-SRC-2UVKRC2XNADWW7R4 src -m set --match-set KUBE-DST-SF5RGCOMQA7SYOU4 dst -m tcp --dport 8080 -j MARK --set-xmark 0x10000/0x10000
[0:0] -A KUBE-NWPLCY-EP3TLOLLFXCO4NCE -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name audit-to-vault namespace evidscope" -m set --match-set KUBE-SRC-2UVKRC2XNADWW7R4 src -m set --match-set KUBE-DST-SF5RGCOMQA7SYOU4 dst -m tcp --dport 8080 -m mark --mark 0x10000/0x10000 -j RETURN
[0:0] -A KUBE-NWPLCY-EP3TLOLLFXCO4NCE -p udp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name audit-to-vault namespace evidscope" -m set --match-set KUBE-SRC-2UVKRC2XNADWW7R4 src -m set --match-set KUBE-DST-L5ZYQJAEGUKJWZKM dst -m udp --dport 53 -j MARK --set-xmark 0x10000/0x10000
[0:0] -A KUBE-NWPLCY-EP3TLOLLFXCO4NCE -p udp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name audit-to-vault namespace evidscope" -m set --match-set KUBE-SRC-2UVKRC2XNADWW7R4 src -m set --match-set KUBE-DST-L5ZYQJAEGUKJWZKM dst -m udp --dport 53 -m mark --mark 0x10000/0x10000 -j RETURN
[0:0] -A KUBE-NWPLCY-EP3TLOLLFXCO4NCE -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name audit-to-vault namespace evidscope" -m set --match-set KUBE-SRC-2UVKRC2XNADWW7R4 src -m set --match-set KUBE-DST-L5ZYQJAEGUKJWZKM dst -m tcp --dport 53 -j MARK --set-xmark 0x10000/0x10000
[0:0] -A KUBE-NWPLCY-EP3TLOLLFXCO4NCE -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name audit-to-vault namespace evidscope" -m set --match-set KUBE-SRC-2UVKRC2XNADWW7R4 src -m set --match-set KUBE-DST-L5ZYQJAEGUKJWZKM dst -m tcp --dport 53 -m mark --mark 0x10000/0x10000 -j RETURN
[0:0] -A KUBE-NWPLCY-EP3TLOLLFXCO4NCE -m comment --comment "rule to log dropped traffic" -m limit --limit 10/min --limit-burst 10 -m mark ! --mark 0x10000/0x10000 -j NFLOG --nflog-prefix "DROP by policy evidscope/audit-to-vault" --nflog-group 100
[0:0] -A KUBE-NWPLCY-FFCIBUADGISF4ZW2 -p udp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name network-probe-dns-only namespace evidscope" -m set --match-set KUBE-SRC-6OSE3RQWSL4UZNIP src -m set --match-set KUBE-DST-FWXKYXRYYIMBVP4Y dst -m udp --dport 53 -j MARK --set-xmark 0x10000/0x10000
[0:0] -A KUBE-NWPLCY-FFCIBUADGISF4ZW2 -p udp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name network-probe-dns-only namespace evidscope" -m set --match-set KUBE-SRC-6OSE3RQWSL4UZNIP src -m set --match-set KUBE-DST-FWXKYXRYYIMBVP4Y dst -m udp --dport 53 -m mark --mark 0x10000/0x10000 -j RETURN
[0:0] -A KUBE-NWPLCY-FFCIBUADGISF4ZW2 -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name network-probe-dns-only namespace evidscope" -m set --match-set KUBE-SRC-6OSE3RQWSL4UZNIP src -m set --match-set KUBE-DST-FWXKYXRYYIMBVP4Y dst -m tcp --dport 53 -j MARK --set-xmark 0x10000/0x10000
[0:0] -A KUBE-NWPLCY-FFCIBUADGISF4ZW2 -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name network-probe-dns-only namespace evidscope" -m set --match-set KUBE-SRC-6OSE3RQWSL4UZNIP src -m set --match-set KUBE-DST-FWXKYXRYYIMBVP4Y dst -m tcp --dport 53 -m mark --mark 0x10000/0x10000 -j RETURN
[0:0] -A KUBE-NWPLCY-FFCIBUADGISF4ZW2 -m comment --comment "rule to log dropped traffic" -m limit --limit 10/min --limit-burst 10 -m mark ! --mark 0x10000/0x10000 -j NFLOG --nflog-prefix "DROP by policy evidscope/network-probe-dns-only" --nflog-group 100
[0:0] -A KUBE-NWPLCY-GEX54ESJ3GESE4HG -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name vault-from-gateways-workers namespace evidscope" -m set --match-set KUBE-SRC-BRGRGDZIDFEXE6JZ src -m set --match-set KUBE-DST-4XXWWAZPRGHLHL63 dst -m tcp --dport 8080 -j MARK --set-xmark 0x10000/0x10000
[0:0] -A KUBE-NWPLCY-GEX54ESJ3GESE4HG -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name vault-from-gateways-workers namespace evidscope" -m set --match-set KUBE-SRC-BRGRGDZIDFEXE6JZ src -m set --match-set KUBE-DST-4XXWWAZPRGHLHL63 dst -m tcp --dport 8080 -m mark --mark 0x10000/0x10000 -j RETURN
[0:0] -A KUBE-NWPLCY-GEX54ESJ3GESE4HG -m comment --comment "rule to log dropped traffic" -m limit --limit 10/min --limit-burst 10 -m mark ! --mark 0x10000/0x10000 -j NFLOG --nflog-prefix "DROP by policy evidscope/vault-from-gateways-workers" --nflog-group 100
[0:0] -A KUBE-NWPLCY-KCOQQZUQKCVQRMHZ -m comment --comment "rule to log dropped traffic" -m limit --limit 10/min --limit-burst 10 -m mark ! --mark 0x10000/0x10000 -j NFLOG --nflog-prefix "DROP by policy evidscope/ingress-approved-clients" --nflog-group 100
[0:0] -A KUBE-NWPLCY-KJ543XKAP2JWFWVG -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name worker-to-vault namespace evidscope" -m set --match-set KUBE-SRC-YBPC23AMUE6W6SOV src -m set --match-set KUBE-DST-BONCJFVJX4BY7OBJ dst -m tcp --dport 8080 -j MARK --set-xmark 0x10000/0x10000
[0:0] -A KUBE-NWPLCY-KJ543XKAP2JWFWVG -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name worker-to-vault namespace evidscope" -m set --match-set KUBE-SRC-YBPC23AMUE6W6SOV src -m set --match-set KUBE-DST-BONCJFVJX4BY7OBJ dst -m tcp --dport 8080 -m mark --mark 0x10000/0x10000 -j RETURN
[0:0] -A KUBE-NWPLCY-KJ543XKAP2JWFWVG -p udp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name worker-to-vault namespace evidscope" -m set --match-set KUBE-SRC-YBPC23AMUE6W6SOV src -m set --match-set KUBE-DST-CIP5QFOCOFHCSWTW dst -m udp --dport 53 -j MARK --set-xmark 0x10000/0x10000
[0:0] -A KUBE-NWPLCY-KJ543XKAP2JWFWVG -p udp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name worker-to-vault namespace evidscope" -m set --match-set KUBE-SRC-YBPC23AMUE6W6SOV src -m set --match-set KUBE-DST-CIP5QFOCOFHCSWTW dst -m udp --dport 53 -m mark --mark 0x10000/0x10000 -j RETURN
[0:0] -A KUBE-NWPLCY-KJ543XKAP2JWFWVG -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name worker-to-vault namespace evidscope" -m set --match-set KUBE-SRC-YBPC23AMUE6W6SOV src -m set --match-set KUBE-DST-CIP5QFOCOFHCSWTW dst -m tcp --dport 53 -j MARK --set-xmark 0x10000/0x10000
[0:0] -A KUBE-NWPLCY-KJ543XKAP2JWFWVG -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name worker-to-vault namespace evidscope" -m set --match-set KUBE-SRC-YBPC23AMUE6W6SOV src -m set --match-set KUBE-DST-CIP5QFOCOFHCSWTW dst -m tcp --dport 53 -m mark --mark 0x10000/0x10000 -j RETURN
[0:0] -A KUBE-NWPLCY-KJ543XKAP2JWFWVG -m comment --comment "rule to log dropped traffic" -m limit --limit 10/min --limit-burst 10 -m mark ! --mark 0x10000/0x10000 -j NFLOG --nflog-prefix "DROP by policy evidscope/worker-to-vault" --nflog-group 100
[0:0] -A KUBE-NWPLCY-TBPD5DFZ46H2NSTF -m comment --comment "rule to log dropped traffic" -m limit --limit 10/min --limit-burst 10 -m mark ! --mark 0x10000/0x10000 -j NFLOG --nflog-prefix "DROP by policy evidscope/audit-approved-clients" --nflog-group 100
[0:0] -A KUBE-NWPLCY-TS4YBIM3KQBOBTSF -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name load-collector-egress namespace evidscope" -m set --match-set KUBE-SRC-T3YD2U4L3MNDOOFS src -m set --match-set KUBE-DST-PZAYO66JQ6SNQ4NX dst -m tcp --dport 8080 -j MARK --set-xmark 0x10000/0x10000
[0:0] -A KUBE-NWPLCY-TS4YBIM3KQBOBTSF -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name load-collector-egress namespace evidscope" -m set --match-set KUBE-SRC-T3YD2U4L3MNDOOFS src -m set --match-set KUBE-DST-PZAYO66JQ6SNQ4NX dst -m tcp --dport 8080 -m mark --mark 0x10000/0x10000 -j RETURN
[0:0] -A KUBE-NWPLCY-TS4YBIM3KQBOBTSF -p udp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name load-collector-egress namespace evidscope" -m set --match-set KUBE-SRC-T3YD2U4L3MNDOOFS src -m set --match-set KUBE-DST-D4YCSTDNVVDUR2ZR dst -m udp --dport 53 -j MARK --set-xmark 0x10000/0x10000
[0:0] -A KUBE-NWPLCY-TS4YBIM3KQBOBTSF -p udp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name load-collector-egress namespace evidscope" -m set --match-set KUBE-SRC-T3YD2U4L3MNDOOFS src -m set --match-set KUBE-DST-D4YCSTDNVVDUR2ZR dst -m udp --dport 53 -m mark --mark 0x10000/0x10000 -j RETURN
[0:0] -A KUBE-NWPLCY-TS4YBIM3KQBOBTSF -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name load-collector-egress namespace evidscope" -m set --match-set KUBE-SRC-T3YD2U4L3MNDOOFS src -m set --match-set KUBE-DST-D4YCSTDNVVDUR2ZR dst -m tcp --dport 53 -j MARK --set-xmark 0x10000/0x10000
[0:0] -A KUBE-NWPLCY-TS4YBIM3KQBOBTSF -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name load-collector-egress namespace evidscope" -m set --match-set KUBE-SRC-T3YD2U4L3MNDOOFS src -m set --match-set KUBE-DST-D4YCSTDNVVDUR2ZR dst -m tcp --dport 53 -m mark --mark 0x10000/0x10000 -j RETURN
[0:0] -A KUBE-NWPLCY-TS4YBIM3KQBOBTSF -m comment --comment "rule to log dropped traffic" -m limit --limit 10/min --limit-burst 10 -m mark ! --mark 0x10000/0x10000 -j NFLOG --nflog-prefix "DROP by policy evidscope/load-collector-egress" --nflog-group 100
[0:0] -A KUBE-NWPLCY-VMX2OD5X6E3SELBA -m comment --comment "rule to log dropped traffic" -m limit --limit 10/min --limit-burst 10 -m mark ! --mark 0x10000/0x10000 -j NFLOG --nflog-prefix "DROP by policy evidscope/deny-all" --nflog-group 100
[63:29691] -A KUBE-POD-FW-7DTVWGOX6Q6VDYRC -m comment --comment "common bi-directional traffic policy rules" -j KUBE-NWPLCY-COMMON
[4:240] -A KUBE-POD-FW-7DTVWGOX6Q6VDYRC -d 10.42.3.3/32 -m comment --comment "rule to permit the traffic traffic to pods when source is the pod\'s local node" -m addrtype --src-type LOCAL -j ACCEPT
[0:0] -A KUBE-POD-FW-7DTVWGOX6Q6VDYRC -d 10.42.3.3/32 -m comment --comment "run through nw policy audit-approved-clients" -j KUBE-NWPLCY-TBPD5DFZ46H2NSTF
[0:0] -A KUBE-POD-FW-7DTVWGOX6Q6VDYRC -s 10.42.3.3/32 -m comment --comment "run through nw policy audit-to-vault" -j KUBE-NWPLCY-EP3TLOLLFXCO4NCE
[0:0] -A KUBE-POD-FW-7DTVWGOX6Q6VDYRC -m comment --comment "run through nw policy deny-all" -j KUBE-NWPLCY-VMX2OD5X6E3SELBA
[0:0] -A KUBE-POD-FW-7DTVWGOX6Q6VDYRC -m comment --comment "rule to log dropped traffic POD name:audit-86789b9bb9-2jsd9 namespace: evidscope" -m mark ! --mark 0x10000/0x10000 -m limit --limit 10/min --limit-burst 10 -j NFLOG --nflog-group 100
[0:0] -A KUBE-POD-FW-7DTVWGOX6Q6VDYRC -m comment --comment "rule to REJECT traffic destined for POD name:audit-86789b9bb9-2jsd9 namespace: evidscope" -m mark ! --mark 0x10000/0x10000 -j REJECT --reject-with icmp-port-unreachable
[0:0] -A KUBE-POD-FW-7DTVWGOX6Q6VDYRC -j MARK --set-xmark 0x0/0x10000
[0:0] -A KUBE-POD-FW-7DTVWGOX6Q6VDYRC -m comment --comment "set mark to ACCEPT traffic that comply to network policies" -j MARK --set-xmark 0x20000/0x20000
[53:23298] -A KUBE-POD-FW-JVN3SWUVDHBSWPWJ -m comment --comment "common bi-directional traffic policy rules" -j KUBE-NWPLCY-COMMON
[3:180] -A KUBE-POD-FW-JVN3SWUVDHBSWPWJ -d 10.42.3.7/32 -m comment --comment "rule to permit the traffic traffic to pods when source is the pod\'s local node" -m addrtype --src-type LOCAL -j ACCEPT
[0:0] -A KUBE-POD-FW-JVN3SWUVDHBSWPWJ -d 10.42.3.7/32 -m comment --comment "run through nw policy ingress-approved-clients" -j KUBE-NWPLCY-KCOQQZUQKCVQRMHZ
[0:0] -A KUBE-POD-FW-JVN3SWUVDHBSWPWJ -s 10.42.3.7/32 -m comment --comment "run through nw policy ingress-to-vault" -j KUBE-NWPLCY-7EIQEOQNYOY5QJJI
[0:0] -A KUBE-POD-FW-JVN3SWUVDHBSWPWJ -m comment --comment "run through nw policy deny-all" -j KUBE-NWPLCY-VMX2OD5X6E3SELBA
[0:0] -A KUBE-POD-FW-JVN3SWUVDHBSWPWJ -m comment --comment "rule to log dropped traffic POD name:ingress-7bc7bdbfdf-zgvgw namespace: evidscope" -m mark ! --mark 0x10000/0x10000 -m limit --limit 10/min --limit-burst 10 -j NFLOG --nflog-group 100
[0:0] -A KUBE-POD-FW-JVN3SWUVDHBSWPWJ -m comment --comment "rule to REJECT traffic destined for POD name:ingress-7bc7bdbfdf-zgvgw namespace: evidscope" -m mark ! --mark 0x10000/0x10000 -j REJECT --reject-with icmp-port-unreachable
[0:0] -A KUBE-POD-FW-JVN3SWUVDHBSWPWJ -j MARK --set-xmark 0x0/0x10000
[0:0] -A KUBE-POD-FW-JVN3SWUVDHBSWPWJ -m comment --comment "set mark to ACCEPT traffic that comply to network policies" -j MARK --set-xmark 0x20000/0x20000
[177:76863] -A KUBE-POD-FW-ZUWXXR5ULAICLTHP -m comment --comment "common bi-directional traffic policy rules" -j KUBE-NWPLCY-COMMON
[4:240] -A KUBE-POD-FW-ZUWXXR5ULAICLTHP -d 10.42.3.4/32 -m comment --comment "rule to permit the traffic traffic to pods when source is the pod\'s local node" -m addrtype --src-type LOCAL -j ACCEPT
[0:0] -A KUBE-POD-FW-ZUWXXR5ULAICLTHP -s 10.42.3.4/32 -m comment --comment "run through nw policy worker-to-vault" -j KUBE-NWPLCY-KJ543XKAP2JWFWVG
[0:0] -A KUBE-POD-FW-ZUWXXR5ULAICLTHP -m comment --comment "run through nw policy deny-all" -j KUBE-NWPLCY-VMX2OD5X6E3SELBA
[0:0] -A KUBE-POD-FW-ZUWXXR5ULAICLTHP -m comment --comment "rule to log dropped traffic POD name:worker-84b7d46d7c-jtd6f namespace: evidscope" -m mark ! --mark 0x10000/0x10000 -m limit --limit 10/min --limit-burst 10 -j NFLOG --nflog-group 100
[0:0] -A KUBE-POD-FW-ZUWXXR5ULAICLTHP -m comment --comment "rule to REJECT traffic destined for POD name:worker-84b7d46d7c-jtd6f namespace: evidscope" -m mark ! --mark 0x10000/0x10000 -j REJECT --reject-with icmp-port-unreachable
[0:0] -A KUBE-POD-FW-ZUWXXR5ULAICLTHP -j MARK --set-xmark 0x0/0x10000
[0:0] -A KUBE-POD-FW-ZUWXXR5ULAICLTHP -m comment --comment "set mark to ACCEPT traffic that comply to network policies" -j MARK --set-xmark 0x20000/0x20000
[38:31198] -A KUBE-ROUTER-FORWARD -d 10.42.3.4/32 -m comment --comment "rule to jump traffic destined to POD name:worker-84b7d46d7c-jtd6f namespace: evidscope to chain KUBE-POD-FW-ZUWXXR5ULAICLTHP" -j KUBE-POD-FW-ZUWXXR5ULAICLTHP
[0:0] -A KUBE-ROUTER-FORWARD -d 10.42.3.4/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic destined to POD name:worker-84b7d46d7c-jtd6f namespace: evidscope to chain KUBE-POD-FW-ZUWXXR5ULAICLTHP" -j KUBE-POD-FW-ZUWXXR5ULAICLTHP
[77:17264] -A KUBE-ROUTER-FORWARD -s 10.42.3.4/32 -m comment --comment "rule to jump traffic from POD name:worker-84b7d46d7c-jtd6f namespace: evidscope to chain KUBE-POD-FW-ZUWXXR5ULAICLTHP" -j KUBE-POD-FW-ZUWXXR5ULAICLTHP
[0:0] -A KUBE-ROUTER-FORWARD -s 10.42.3.4/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic from POD name:worker-84b7d46d7c-jtd6f namespace: evidscope to chain KUBE-POD-FW-ZUWXXR5ULAICLTHP" -j KUBE-POD-FW-ZUWXXR5ULAICLTHP
[2:1286] -A KUBE-ROUTER-FORWARD -d 10.42.3.3/32 -m comment --comment "rule to jump traffic destined to POD name:audit-86789b9bb9-2jsd9 namespace: evidscope to chain KUBE-POD-FW-7DTVWGOX6Q6VDYRC" -j KUBE-POD-FW-7DTVWGOX6Q6VDYRC
[0:0] -A KUBE-ROUTER-FORWARD -d 10.42.3.3/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic destined to POD name:audit-86789b9bb9-2jsd9 namespace: evidscope to chain KUBE-POD-FW-7DTVWGOX6Q6VDYRC" -j KUBE-POD-FW-7DTVWGOX6Q6VDYRC
[5:935] -A KUBE-ROUTER-FORWARD -s 10.42.3.3/32 -m comment --comment "rule to jump traffic from POD name:audit-86789b9bb9-2jsd9 namespace: evidscope to chain KUBE-POD-FW-7DTVWGOX6Q6VDYRC" -j KUBE-POD-FW-7DTVWGOX6Q6VDYRC
[0:0] -A KUBE-ROUTER-FORWARD -s 10.42.3.3/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic from POD name:audit-86789b9bb9-2jsd9 namespace: evidscope to chain KUBE-POD-FW-7DTVWGOX6Q6VDYRC" -j KUBE-POD-FW-7DTVWGOX6Q6VDYRC
[2:1286] -A KUBE-ROUTER-FORWARD -d 10.42.3.7/32 -m comment --comment "rule to jump traffic destined to POD name:ingress-7bc7bdbfdf-zgvgw namespace: evidscope to chain KUBE-POD-FW-JVN3SWUVDHBSWPWJ" -j KUBE-POD-FW-JVN3SWUVDHBSWPWJ
[0:0] -A KUBE-ROUTER-FORWARD -d 10.42.3.7/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic destined to POD name:ingress-7bc7bdbfdf-zgvgw namespace: evidscope to chain KUBE-POD-FW-JVN3SWUVDHBSWPWJ" -j KUBE-POD-FW-JVN3SWUVDHBSWPWJ
[4:658] -A KUBE-ROUTER-FORWARD -s 10.42.3.7/32 -m comment --comment "rule to jump traffic from POD name:ingress-7bc7bdbfdf-zgvgw namespace: evidscope to chain KUBE-POD-FW-JVN3SWUVDHBSWPWJ" -j KUBE-POD-FW-JVN3SWUVDHBSWPWJ
[0:0] -A KUBE-ROUTER-FORWARD -s 10.42.3.7/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic from POD name:ingress-7bc7bdbfdf-zgvgw namespace: evidscope to chain KUBE-POD-FW-JVN3SWUVDHBSWPWJ" -j KUBE-POD-FW-JVN3SWUVDHBSWPWJ
[0:0] -A KUBE-ROUTER-INPUT -d 10.43.0.0/16 -m comment --comment "allow traffic to primary/secondary cluster IP range - EKROEGTNIJ3AP3LC" -j RETURN
[0:0] -A KUBE-ROUTER-INPUT -p tcp -m comment --comment "allow LOCAL TCP traffic to node ports - LR7XO7NXDBGQJD2M" -m addrtype --dst-type LOCAL -m multiport --dports 30000:32767 -j RETURN
[0:0] -A KUBE-ROUTER-INPUT -p udp -m comment --comment "allow LOCAL UDP traffic to node ports - 76UCBPIZNGJNWNUZ" -m addrtype --dst-type LOCAL -m multiport --dports 30000:32767 -j RETURN
[28:19680] -A KUBE-ROUTER-INPUT -s 10.42.3.4/32 -m comment --comment "rule to jump traffic from POD name:worker-84b7d46d7c-jtd6f namespace: evidscope to chain KUBE-POD-FW-ZUWXXR5ULAICLTHP" -j KUBE-POD-FW-ZUWXXR5ULAICLTHP
[23:18825] -A KUBE-ROUTER-INPUT -s 10.42.3.3/32 -m comment --comment "rule to jump traffic from POD name:audit-86789b9bb9-2jsd9 namespace: evidscope to chain KUBE-POD-FW-7DTVWGOX6Q6VDYRC" -j KUBE-POD-FW-7DTVWGOX6Q6VDYRC
[19:14695] -A KUBE-ROUTER-INPUT -s 10.42.3.7/32 -m comment --comment "rule to jump traffic from POD name:ingress-7bc7bdbfdf-zgvgw namespace: evidscope to chain KUBE-POD-FW-JVN3SWUVDHBSWPWJ" -j KUBE-POD-FW-JVN3SWUVDHBSWPWJ
[34:8721] -A KUBE-ROUTER-OUTPUT -d 10.42.3.4/32 -m comment --comment "rule to jump traffic destined to POD name:worker-84b7d46d7c-jtd6f namespace: evidscope to chain KUBE-POD-FW-ZUWXXR5ULAICLTHP" -j KUBE-POD-FW-ZUWXXR5ULAICLTHP
[0:0] -A KUBE-ROUTER-OUTPUT -s 10.42.3.4/32 -m comment --comment "rule to jump traffic from POD name:worker-84b7d46d7c-jtd6f namespace: evidscope to chain KUBE-POD-FW-ZUWXXR5ULAICLTHP" -j KUBE-POD-FW-ZUWXXR5ULAICLTHP
[33:8645] -A KUBE-ROUTER-OUTPUT -d 10.42.3.3/32 -m comment --comment "rule to jump traffic destined to POD name:audit-86789b9bb9-2jsd9 namespace: evidscope to chain KUBE-POD-FW-7DTVWGOX6Q6VDYRC" -j KUBE-POD-FW-7DTVWGOX6Q6VDYRC
[0:0] -A KUBE-ROUTER-OUTPUT -s 10.42.3.3/32 -m comment --comment "rule to jump traffic from POD name:audit-86789b9bb9-2jsd9 namespace: evidscope to chain KUBE-POD-FW-7DTVWGOX6Q6VDYRC" -j KUBE-POD-FW-7DTVWGOX6Q6VDYRC
[28:6659] -A KUBE-ROUTER-OUTPUT -d 10.42.3.7/32 -m comment --comment "rule to jump traffic destined to POD name:ingress-7bc7bdbfdf-zgvgw namespace: evidscope to chain KUBE-POD-FW-JVN3SWUVDHBSWPWJ" -j KUBE-POD-FW-JVN3SWUVDHBSWPWJ
[0:0] -A KUBE-ROUTER-OUTPUT -s 10.42.3.7/32 -m comment --comment "rule to jump traffic from POD name:ingress-7bc7bdbfdf-zgvgw namespace: evidscope to chain KUBE-POD-FW-JVN3SWUVDHBSWPWJ" -j KUBE-POD-FW-JVN3SWUVDHBSWPWJ
COMMIT
# Completed on Tue Sep  8 08:03:15 2026
# Generated by iptables-save v1.8.11 (nf_tables) on Tue Sep  8 08:03:15 2026
*nat
:PREROUTING ACCEPT [6806:722950]
:INPUT ACCEPT [3979:553330]
:OUTPUT ACCEPT [5020:525125]
:POSTROUTING ACCEPT [9109:796318]
:DOCKER_OUTPUT - [0:0]
:DOCKER_POSTROUTING - [0:0]
:FLANNEL-POSTRTG - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-MARK-MASQ - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-POSTROUTING - [0:0]
:KUBE-PROXY-CANARY - [0:0]
:KUBE-SEP-2DEA5CRUMDE56ETQ - [0:0]
:KUBE-SEP-3YLRQZ6UJQXS6T5Q - [0:0]
:KUBE-SEP-5I6E2X5HECKZZRHU - [0:0]
:KUBE-SEP-6BOWLOQOTG7UFDIE - [0:0]
:KUBE-SEP-AHUWE6HMH4Y6LK2D - [0:0]
:KUBE-SEP-DH4WSZP5V6G2BQEQ - [0:0]
:KUBE-SEP-GQFJJFHKHZPIAODM - [0:0]
:KUBE-SEP-HOT2XMKPNFS7SQ2N - [0:0]
:KUBE-SEP-MKXXD25Y7MYIPO4Y - [0:0]
:KUBE-SEP-VC44KZLMZMCM75HL - [0:0]
:KUBE-SEP-YJTIVVULKTVUWPXQ - [0:0]
:KUBE-SERVICES - [0:0]
:KUBE-SVC-DUF4H3CKWTTFSHUM - [0:0]
:KUBE-SVC-ERIFXISQEP7F7OF4 - [0:0]
:KUBE-SVC-JD5MR3NA4I4DYORP - [0:0]
:KUBE-SVC-N4CARDNF46WSQ45V - [0:0]
:KUBE-SVC-NPX46M4PTMTKRN6Y - [0:0]
:KUBE-SVC-QY7SHISHUJKIQVBQ - [0:0]
:KUBE-SVC-TCOU7JCQXEZGVUNU - [0:0]
:KUBE-SVC-Z4ANX4WAEWEBLCTM - [0:0]
[8112:826548] -A PREROUTING -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
[0:0] -A PREROUTING -d 192.168.65.254/32 -j DOCKER_OUTPUT
[4969:522113] -A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
[37:2835] -A OUTPUT -d 192.168.65.254/32 -j DOCKER_OUTPUT
[9021:790471] -A POSTROUTING -m comment --comment "kubernetes postrouting rules" -j KUBE-POSTROUTING
[0:0] -A POSTROUTING -d 192.168.65.254/32 -j DOCKER_POSTROUTING
[9021:790471] -A POSTROUTING -m comment --comment "flanneld masq" -j FLANNEL-POSTRTG
[0:0] -A DOCKER_OUTPUT -d 192.168.65.254/32 -p tcp -m tcp --dport 53 -j DNAT --to-destination 127.0.0.11:41979
[37:2835] -A DOCKER_OUTPUT -d 192.168.65.254/32 -p udp -m udp --dport 53 -j DNAT --to-destination 127.0.0.11:45643
[0:0] -A DOCKER_POSTROUTING -s 127.0.0.11/32 -p tcp -m tcp --sport 41979 -j SNAT --to-source 192.168.65.254:53
[0:0] -A DOCKER_POSTROUTING -s 127.0.0.11/32 -p udp -m udp --sport 45643 -j SNAT --to-source 192.168.65.254:53
[0:0] -A FLANNEL-POSTRTG -m mark --mark 0x4000/0x4000 -m comment --comment "flanneld masq" -j RETURN
[2253:160418] -A FLANNEL-POSTRTG -s 10.42.3.0/24 -d 10.42.0.0/16 -m comment --comment "flanneld masq" -j RETURN
[2769:166140] -A FLANNEL-POSTRTG -s 10.42.0.0/16 -d 10.42.3.0/24 -m comment --comment "flanneld masq" -j RETURN
[0:0] -A FLANNEL-POSTRTG ! -s 10.42.0.0/16 -d 10.42.3.0/24 -m comment --comment "flanneld masq" -j RETURN
[0:0] -A FLANNEL-POSTRTG -s 10.42.0.0/16 ! -d 224.0.0.0/4 -m comment --comment "flanneld masq" -j MASQUERADE --random-fully
[0:0] -A FLANNEL-POSTRTG ! -s 10.42.0.0/16 -d 10.42.0.0/16 -m comment --comment "flanneld masq" -j MASQUERADE --random-fully
[0:0] -A KUBE-MARK-MASQ -j MARK --set-xmark 0x4000/0x4000
[326:29368] -A KUBE-POSTROUTING -m mark ! --mark 0x4000/0x4000 -j RETURN
[0:0] -A KUBE-POSTROUTING -j MARK --set-xmark 0x4000/0x0
[0:0] -A KUBE-POSTROUTING -m comment --comment "kubernetes service traffic requiring SNAT" -j MASQUERADE --random-fully
[0:0] -A KUBE-SEP-2DEA5CRUMDE56ETQ -s 10.42.1.17/32 -m comment --comment "evidscope/audit:https" -j KUBE-MARK-MASQ
[3:180] -A KUBE-SEP-2DEA5CRUMDE56ETQ -p tcp -m comment --comment "evidscope/audit:https" -m tcp -j DNAT --to-destination 10.42.1.17:8080
[0:0] -A KUBE-SEP-3YLRQZ6UJQXS6T5Q -s 10.42.0.3/32 -m comment --comment "kube-system/kube-dns:metrics" -j KUBE-MARK-MASQ
[0:0] -A KUBE-SEP-3YLRQZ6UJQXS6T5Q -p tcp -m comment --comment "kube-system/kube-dns:metrics" -m tcp -j DNAT --to-destination 10.42.0.3:9153
[0:0] -A KUBE-SEP-5I6E2X5HECKZZRHU -s 10.42.0.5/32 -m comment --comment "evidscope/audit:https" -j KUBE-MARK-MASQ
[4:240] -A KUBE-SEP-5I6E2X5HECKZZRHU -p tcp -m comment --comment "evidscope/audit:https" -m tcp -j DNAT --to-destination 10.42.0.5:8080
[0:0] -A KUBE-SEP-6BOWLOQOTG7UFDIE -s 172.22.0.3/32 -m comment --comment "default/kubernetes:https" -j KUBE-MARK-MASQ
[0:0] -A KUBE-SEP-6BOWLOQOTG7UFDIE -p tcp -m comment --comment "default/kubernetes:https" -m tcp -j DNAT --to-destination 172.22.0.3:6443
[0:0] -A KUBE-SEP-AHUWE6HMH4Y6LK2D -s 10.42.1.3/32 -m comment --comment "evidscope/ingress:https" -j KUBE-MARK-MASQ
[34:2040] -A KUBE-SEP-AHUWE6HMH4Y6LK2D -p tcp -m comment --comment "evidscope/ingress:https" -m tcp -j DNAT --to-destination 10.42.1.3:8080
[0:0] -A KUBE-SEP-DH4WSZP5V6G2BQEQ -s 10.42.0.2/32 -m comment --comment "kube-system/metrics-server:https" -j KUBE-MARK-MASQ
[0:0] -A KUBE-SEP-DH4WSZP5V6G2BQEQ -p tcp -m comment --comment "kube-system/metrics-server:https" -m tcp -j DNAT --to-destination 10.42.0.2:10250
[0:0] -A KUBE-SEP-GQFJJFHKHZPIAODM -s 10.42.0.3/32 -m comment --comment "kube-system/kube-dns:dns-tcp" -j KUBE-MARK-MASQ
[0:0] -A KUBE-SEP-GQFJJFHKHZPIAODM -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp" -m tcp -j DNAT --to-destination 10.42.0.3:53
[0:0] -A KUBE-SEP-HOT2XMKPNFS7SQ2N -s 10.42.0.3/32 -m comment --comment "kube-system/kube-dns:dns" -j KUBE-MARK-MASQ
[992:84758] -A KUBE-SEP-HOT2XMKPNFS7SQ2N -p udp -m comment --comment "kube-system/kube-dns:dns" -m udp -j DNAT --to-destination 10.42.0.3:53
[0:0] -A KUBE-SEP-MKXXD25Y7MYIPO4Y -s 10.42.1.4/32 -m comment --comment "evidscope/vault:https" -j KUBE-MARK-MASQ
[232:13920] -A KUBE-SEP-MKXXD25Y7MYIPO4Y -p tcp -m comment --comment "evidscope/vault:https" -m tcp -j DNAT --to-destination 10.42.1.4:8080
[0:0] -A KUBE-SEP-VC44KZLMZMCM75HL -s 10.42.3.7/32 -m comment --comment "evidscope/ingress:https" -j KUBE-MARK-MASQ
[37:2220] -A KUBE-SEP-VC44KZLMZMCM75HL -p tcp -m comment --comment "evidscope/ingress:https" -m tcp -j DNAT --to-destination 10.42.3.7:8080
[0:0] -A KUBE-SEP-YJTIVVULKTVUWPXQ -s 10.42.3.3/32 -m comment --comment "evidscope/audit:https" -j KUBE-MARK-MASQ
[2:120] -A KUBE-SEP-YJTIVVULKTVUWPXQ -p tcp -m comment --comment "evidscope/audit:https" -m tcp -j DNAT --to-destination 10.42.3.3:8080
[0:0] -A KUBE-SERVICES -d 10.43.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-SVC-NPX46M4PTMTKRN6Y
[93:7959] -A KUBE-SERVICES -d 10.43.0.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns cluster IP" -m udp --dport 53 -j KUBE-SVC-TCOU7JCQXEZGVUNU
[0:0] -A KUBE-SERVICES -d 10.43.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -m tcp --dport 53 -j KUBE-SVC-ERIFXISQEP7F7OF4
[0:0] -A KUBE-SERVICES -d 10.43.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:metrics cluster IP" -m tcp --dport 9153 -j KUBE-SVC-JD5MR3NA4I4DYORP
[0:0] -A KUBE-SERVICES -d 10.43.42.191/32 -p tcp -m comment --comment "kube-system/metrics-server:https cluster IP" -m tcp --dport 443 -j KUBE-SVC-Z4ANX4WAEWEBLCTM
[13:780] -A KUBE-SERVICES -d 10.43.180.222/32 -p tcp -m comment --comment "evidscope/vault:https cluster IP" -m tcp --dport 8080 -j KUBE-SVC-DUF4H3CKWTTFSHUM
[9:540] -A KUBE-SERVICES -d 10.43.223.167/32 -p tcp -m comment --comment "evidscope/ingress:https cluster IP" -m tcp --dport 8080 -j KUBE-SVC-QY7SHISHUJKIQVBQ
[9:540] -A KUBE-SERVICES -d 10.43.22.16/32 -p tcp -m comment --comment "evidscope/audit:https cluster IP" -m tcp --dport 8080 -j KUBE-SVC-N4CARDNF46WSQ45V
[102:22112] -A KUBE-SERVICES -m comment --comment "kubernetes service nodeports; NOTE: this must be the last rule in this chain" -m addrtype --dst-type LOCAL -j KUBE-NODEPORTS
[0:0] -A KUBE-SVC-DUF4H3CKWTTFSHUM ! -s 10.42.0.0/16 -d 10.43.180.222/32 -p tcp -m comment --comment "evidscope/vault:https cluster IP" -m tcp --dport 8080 -j KUBE-MARK-MASQ
[232:13920] -A KUBE-SVC-DUF4H3CKWTTFSHUM -m comment --comment "evidscope/vault:https -> 10.42.1.4:8080" -j KUBE-SEP-MKXXD25Y7MYIPO4Y
[0:0] -A KUBE-SVC-ERIFXISQEP7F7OF4 ! -s 10.42.0.0/16 -d 10.43.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -m tcp --dport 53 -j KUBE-MARK-MASQ
[0:0] -A KUBE-SVC-ERIFXISQEP7F7OF4 -m comment --comment "kube-system/kube-dns:dns-tcp -> 10.42.0.3:53" -j KUBE-SEP-GQFJJFHKHZPIAODM
[0:0] -A KUBE-SVC-JD5MR3NA4I4DYORP ! -s 10.42.0.0/16 -d 10.43.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:metrics cluster IP" -m tcp --dport 9153 -j KUBE-MARK-MASQ
[0:0] -A KUBE-SVC-JD5MR3NA4I4DYORP -m comment --comment "kube-system/kube-dns:metrics -> 10.42.0.3:9153" -j KUBE-SEP-3YLRQZ6UJQXS6T5Q
[0:0] -A KUBE-SVC-N4CARDNF46WSQ45V ! -s 10.42.0.0/16 -d 10.43.22.16/32 -p tcp -m comment --comment "evidscope/audit:https cluster IP" -m tcp --dport 8080 -j KUBE-MARK-MASQ
[4:240] -A KUBE-SVC-N4CARDNF46WSQ45V -m comment --comment "evidscope/audit:https -> 10.42.0.5:8080" -m statistic --mode random --probability 0.33333333349 -j KUBE-SEP-5I6E2X5HECKZZRHU
[3:180] -A KUBE-SVC-N4CARDNF46WSQ45V -m comment --comment "evidscope/audit:https -> 10.42.1.17:8080" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-2DEA5CRUMDE56ETQ
[2:120] -A KUBE-SVC-N4CARDNF46WSQ45V -m comment --comment "evidscope/audit:https -> 10.42.3.3:8080" -j KUBE-SEP-YJTIVVULKTVUWPXQ
[0:0] -A KUBE-SVC-NPX46M4PTMTKRN6Y ! -s 10.42.0.0/16 -d 10.43.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
[0:0] -A KUBE-SVC-NPX46M4PTMTKRN6Y -m comment --comment "default/kubernetes:https -> 172.22.0.3:6443" -j KUBE-SEP-6BOWLOQOTG7UFDIE
[0:0] -A KUBE-SVC-QY7SHISHUJKIQVBQ ! -s 10.42.0.0/16 -d 10.43.223.167/32 -p tcp -m comment --comment "evidscope/ingress:https cluster IP" -m tcp --dport 8080 -j KUBE-MARK-MASQ
[34:2040] -A KUBE-SVC-QY7SHISHUJKIQVBQ -m comment --comment "evidscope/ingress:https -> 10.42.1.3:8080" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-AHUWE6HMH4Y6LK2D
[37:2220] -A KUBE-SVC-QY7SHISHUJKIQVBQ -m comment --comment "evidscope/ingress:https -> 10.42.3.7:8080" -j KUBE-SEP-VC44KZLMZMCM75HL
[0:0] -A KUBE-SVC-TCOU7JCQXEZGVUNU ! -s 10.42.0.0/16 -d 10.43.0.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns cluster IP" -m udp --dport 53 -j KUBE-MARK-MASQ
[992:84758] -A KUBE-SVC-TCOU7JCQXEZGVUNU -m comment --comment "kube-system/kube-dns:dns -> 10.42.0.3:53" -j KUBE-SEP-HOT2XMKPNFS7SQ2N
[0:0] -A KUBE-SVC-Z4ANX4WAEWEBLCTM ! -s 10.42.0.0/16 -d 10.43.42.191/32 -p tcp -m comment --comment "kube-system/metrics-server:https cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
[0:0] -A KUBE-SVC-Z4ANX4WAEWEBLCTM -m comment --comment "kube-system/metrics-server:https -> 10.42.0.2:10250" -j KUBE-SEP-DH4WSZP5V6G2BQEQ
COMMIT
# Completed on Tue Sep  8 08:03:15 2026
